Streamline experiments: remove redundant configurations
- Reduced experiments from 7 to 5 by removing duplicates
- Exp2_Standard_UNet now serves as baseline for all comparisons
- Removed Exp4_WithSkip (duplicate of Exp2)
- Removed Exp5c_Combined_Loss (duplicate of Exp2)
- Renamed Exp5a/5b to Exp4/Exp5 for cleaner naming
- Updated visualization cells to use new experiment names
- Fixed ReduceLROnPlateau verbose parameter for PyTorch 2.x

--- a/UNet_Polyp_Segmentation.ipynb
+++ b/UNet_Polyp_Segmentation.ipynb
@@ -904,44 +904,43 @@
         "## 9. Run All Experiments\n",
         "\n",
         "We run 5 experiments to compare:\n",
-        "1. **Shallow UNet** (depth=2, with skip) - Baseline\n",
-        "2. **Standard UNet** (depth=4, with skip) - Deeper architecture\n",
-        "3. **UNet WITHOUT skip connections** (depth=4, no skip) - Ablation study\n",
-        "4. **UNet WITH skip connections** (depth=4, with skip) - Compare with #3\n",
-        "5. **Different loss functions** - BCE vs Dice vs Combined"
+        "1. **Shallow UNet** (depth=2) vs **Standard UNet** (depth=4) - Effect of depth\n",
+        "2. **UNet WITHOUT skip connections** - Ablation study\n",
+        "3. **Different loss functions** - BCE vs Dice vs Combined\n",
+        "\n",
+        "Note: Exp2 (Standard UNet) serves as the baseline for multiple comparisons."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Define experiment configurations\n",
+        "# Define experiment configurations (streamlined - removed redundant experiments)\n",
         "experiments_config = [\n",
-        "    # Experiment 1: Shallow UNet\n",
+        "    # Experiment 1: Shallow UNet (for depth comparison)\n",
         "    {'name': 'Exp1_Shallow_UNet', 'depth': 2, 'use_skip': True, 'loss_type': 'combined'},\n",
         "    \n",
-        "    # Experiment 2: Standard UNet (deeper)\n",
+        "    # Experiment 2: Standard UNet (baseline for all comparisons)\n",
         "    {'name': 'Exp2_Standard_UNet', 'depth': 4, 'use_skip': True, 'loss_type': 'combined'},\n",
         "    \n",
-        "    # Experiment 3: UNet WITHOUT skip connections\n",
+        "    # Experiment 3: UNet WITHOUT skip connections (for skip connection ablation)\n",
         "    {'name': 'Exp3_NoSkip', 'depth': 4, 'use_skip': False, 'loss_type': 'combined'},\n",
         "    \n",
-        "    # Experiment 4: UNet WITH skip connections (same as Exp2, for direct comparison)\n",
-        "    {'name': 'Exp4_WithSkip', 'depth': 4, 'use_skip': True, 'loss_type': 'combined'},\n",
+        "    # Experiment 4: BCE Loss only (for loss function comparison)\n",
+        "    {'name': 'Exp4_BCE_Loss', 'depth': 4, 'use_skip': True, 'loss_type': 'bce'},\n",
         "    \n",
-        "    # Experiment 5a: BCE Loss only\n",
-        "    {'name': 'Exp5a_BCE_Loss', 'depth': 4, 'use_skip': True, 'loss_type': 'bce'},\n",
-        "    \n",
-        "    # Experiment 5b: Dice Loss only\n",
-        "    {'name': 'Exp5b_Dice_Loss', 'depth': 4, 'use_skip': True, 'loss_type': 'dice'},\n",
-        "    \n",
-        "    # Experiment 5c: Combined Loss (same as Exp2)\n",
-        "    {'name': 'Exp5c_Combined_Loss', 'depth': 4, 'use_skip': True, 'loss_type': 'combined'},\n",
+        "    # Experiment 5: Dice Loss only (for loss function comparison)\n",
+        "    {'name': 'Exp5_Dice_Loss', 'depth': 4, 'use_skip': True, 'loss_type': 'dice'},\n",
         "]\n",
         "\n",
         "print(\"Experiments to run:\")\n",
         "for i, exp in enumerate(experiments_config, 1):\n",
-        "    print(f\"  {i}. {exp['name']}: depth={exp['depth']}, skip={exp['use_skip']}, loss={exp['loss_type']}\")"
+        "    print(f\"  {i}. {exp['name']}: depth={exp['depth']}, skip={exp['use_skip']}, loss={exp['loss_type']}\")\n",
+        "\n",
+        "print(\"\\nComparisons:\")\n",
+        "print(\"  - Depth effect: Exp1 vs Exp2\")\n",
+        "print(\"  - Skip connections: Exp3 vs Exp2\")\n",
+        "print(\"  - Loss functions: Exp4 vs Exp5 vs Exp2\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -1068,7 +1067,7 @@
       "source": [
         "# Plot 2: With vs Without Skip Connections\n",
         "print(\"Comparison 2: Effect of Skip Connections\")\n",
-        "plot_training_curves(all_results, ['Exp3_NoSkip', 'Exp4_WithSkip'])"
+        "plot_training_curves(all_results, ['Exp3_NoSkip', 'Exp2_Standard_UNet'])"
       ],
       "execution_count": null,
       "outputs": []
@@ -1079,7 +1078,7 @@
       "source": [
         "# Plot 3: Different Loss Functions\n",
         "print(\"Comparison 3: Effect of Different Loss Functions\")\n",
-        "plot_training_curves(all_results, ['Exp5a_BCE_Loss', 'Exp5b_Dice_Loss', 'Exp5c_Combined_Loss'])"
+        "plot_training_curves(all_results, ['Exp4_BCE_Loss', 'Exp5_Dice_Loss', 'Exp2_Standard_UNet'])"
       ],
       "execution_count": null,
       "outputs": []
@@ -1226,7 +1225,7 @@
         "    \"\"\"Compare predictions with and without skip connections.\"\"\"\n",
         "    # Load models\n",
         "    model_skip = UNet(depth=4, use_skip=True).to(device)\n",
-        "    model_skip.load_state_dict(results_dict['Exp4_WithSkip']['best_model_state'])\n",
+        "    model_skip.load_state_dict(results_dict['Exp2_Standard_UNet']['best_model_state'])\n",
         "    model_skip.eval()\n",
         "    \n",
         "    model_noskip = UNet(depth=4, use_skip=False).to(device)\n",
